assets/stylesheets/energe.css
body {
	margin: 0;
	padding:0;
	background: rgb(247,247,247);
  zoom: 85%;
}

@font-face {
    font-family: 'Verlag Bold'; /*a name to be used later*/
    src: url('../fonts/Verlag-Bold.woff'); /*URL to font*/
}

@font-face {
  font-family: 'Open Sans';
  font-style: normal;
  font-weight: 300;
  src: url('../fonts/OpenSans-Light.woff'); /*URL to font*/
}
@font-face {
  font-family: 'Open Sans Bold';
  font-style: normal;
  font-weight: 600;
  src: url('../fonts/OpenSans-Semibold.woff'); /*URL to font*/
}

.header {

	/*background-image: linear-gradient(-180deg,#39bf9f 0, #02906e 100%);*/
	/*-webkit-box-shadow: rgba(0,0,0,0.15) 0 3px 4px 0,rgba(0,0,0,0.15) 0 -1px 0 0 inset;*/
	height: 120px;
	position: fixed;
	width: 100%;
	top: 0;
	z-index: 2;
	left: 0;

}
/*
.header.changed
{
    filter:blur(4px);
  -o-filter:blur(4px);
  -ms-filter:blur(4px);
  -moz-filter:blur(4px);
  -webkit-filter:blur(4px);
}*/

.logo {
	 width: 234px;
   padding: 0 0 0 4%;
   /*margin: 0 auto;*/
}

.splash {
  height: 650px;
  background: url(../images/bkg-6.png) 50% 0 no-repeat fixed; */
  margin: 0;
  padding: 0;
}

.splash .title {
/*	width: 44%;
*/	/*top, right, bottom, left*/
  padding: 17% 0 0 0;
  color: rgb(249, 249, 249);
  font-size: 52px;
  font-family: 'Verlag Bold';
  width: 100%;
	text-align: center;
}

.content {
  z-index: 1;
  overflow: hidden;
}

.steps {
    height: 550px;
}

.content .steps .title {
/*     width: 44%;
*/    /*top, right, bottom, left*/
    padding: 5% 0 0 0;
    color: black;
    font-size: 34px;
    font-family: 'Open Sans';
    text-align: center;
    margin-bottom: 35px;
}

.border {

  display: block;
  width: 60%;
  height: 1px;
  background: #060606;
  margin: 0 auto;
}

.elements {
  max-width: 1000px;
  height: 250px;
  margin: 30px auto 0;
  display: block;
}

/*.circles {
  margin: 30px auto 0;
  width: 100%;
  display: block;
}

.circle {
  -webkit-transition: all 1.0s ease-in-out;  
  -moz-transition: all 1.0s ease-in-out;  
  -o-transition: all 1.0s ease-in-out;  
  -ms-transition: all 1.0s ease-in-out;  
  transition: all 1.0s ease-in-out;
  width: 180px;
  height: 180px;
  display: block;
float: left;
  
}

.step1 {
  width: 262px;
  background: url(../images/step1.png) no-repeat scroll center 0;
  background-size: 262px 180px;
}

.step2 {
  background: url(../images/step2.png) no-repeat scroll center 0;
  margin: 0 14% 0 14%;
  background-size: 180px 180px;
}

.step3 {
  background: url(../images/step3.png) no-repeat scroll center 0;
  margin-bottom: -1%;
  background-size: 180px 180px;
}

.instructions {
  width: 100%;
  font-family: 'Open Sans';
  text-align: center;
  font-size: 20px;
  display: block;

}

.instruction {
  width: 355px;
  display: block;
  float: left;

}
.instructions .middle {
  padding: 0 4% 0 4%;

}*/


/*.steps {
  max-width: 1000px;
  height: 250px;
  margin: 30px auto 0;
  display: inline-block;
  margin: 0;
}
*/
.element {
  display: inline-block;
  float: left;
  height: 210px;
  width: 27.99%;
  transition: all 1.0s ease-in-out;
  
}

.element.middle{
  /*margin: 0 7% 0 7%;*/
}

.element .activity_1 {
  width: 262px;
  height: 180px;
  background: url(../images/step1.png) no-repeat scroll center 0;
  background-size: 262px 180px;
  margin: 0 auto;
}

.element .activity_2 {
  width: 180px;
  height: 180px;
  background: url(../images/step2.png) no-repeat scroll center 0;
  background-size: 180px 180px;
  margin: 0 auto;
}

.element .activity_3 {
  width: 180px;
  height: 180px;
  background: url(../images/step3.png) no-repeat scroll center 0;
  background-size: 180px 180px;
  margin: 0 auto;
}

.tips {
  height: 650px;
  background-color: #27AE60; 
  /*background-color: rgb(40, 40, 40);*/
  /*margin: 0;*/
  /*padding-top: 600px;*/
  background-position: 50% 225px;
}

.tips .title {
  /*top, right, bottom, left*/
  padding: 5% 0 0 0;
  color: rgb(249, 249, 249);
  font-size: 52px;
  font-family: 'Verlag Bold';
  width: 100%;
  text-align: center;
}

